# VFPGAObfuscator

./: .clang-format  .gitignore  Connection.cpp  Connection.h  Cryptography.cpp  Cryptography.h  FPGA.cpp  FPGA.h  LogicGate.cpp  LogicGate.h  Port.cpp  Port.h  README.md  StandardHeaders.h  Test.cpp  Timer.cpp  Wire.h  meson.build
src/language/: ADDLogicGate.h  ANDLogicGate.h  BUFLogicGate.h  DFFLogicGate.h  DLLogicGate.h  LogicGate.cpp  LogicGate.h  NANDLogicGate.h  NORLogicGate.h  NOTLogicGate.h  ORLogicGate.h  Test.cpp  XNORLogicGate.h  XORLogicGate.h
src/simulator/: Deserializer.cpp  Deserializer.h  Error.cpp  Error.h  FPGA.cpp  FPGA.h  LogicGate.cpp  LogicGate.h  Port.cpp  Port.h  Serializer.cpp  Serializer.h  SharedSerializedTypes.h  StandardHeaders.h  Test.cpp  Timer.cpp  Timer.h  VFPGA.cpp  VFPGA.h
